@@ -12,18 +12,18 @@
     }
 </style>
 <div>
-    <div class="square" style="box-shadow: rgba(0, 0, 0, 0.2) 15px 15px inset;"></div>
-    <div class="square" style="box-shadow: -15px 15px 0 5px rgba(0, 0, 0, 0.2) inset;"></div>
-    <div class="square" style="box-shadow: inset rgba(0, 0, 0, 0.2) 15px -15px 0 -10px;"></div>
-    <div class="square" style="box-shadow: inset -15px -15px 5px rgba(0, 0, 0, 0.2);"></div>
-    <div class="square" style="box-shadow: rgba(0, 0, 0, 0.2) inset -15px -15px 5px;"></div>
+    <div class="square" style="-webkit-box-shadow: rgba(0, 0, 0, 0.2) 15px 15px inset;"></div>
+    <div class="square" style="-webkit-box-shadow: -15px 15px 0 5px rgba(0, 0, 0, 0.2) inset;"></div>
+    <div class="square" style="-webkit-box-shadow: inset rgba(0, 0, 0, 0.2) 15px -15px 0 -10px;"></div>
+    <div class="square" style="-webkit-box-shadow: inset -15px -15px 5px rgba(0, 0, 0, 0.2);"></div>
+    <div class="square" style="-webkit-box-shadow: rgba(0, 0, 0, 0.2) inset -15px -15px 5px;"></div>
 </div>
 <div class="rounded">
-    <div class="square" style="box-shadow: rgba(0, 0, 0, 0.2) 15px 15px inset;"></div>
-    <div class="square" style="box-shadow: rgba(0, 0, 0, 0.2) -15px 15px 0 5px inset;"></div>
-    <div class="square" style="box-shadow: rgba(0, 0, 0, 0.2) 15px -15px 0 -10px inset;"></div>
-    <div class="square" style="box-shadow: rgba(0, 0, 0, 0.2) -15px -15px 5px inset;"></div>
-    <div class="square" style="box-shadow: rgba(0, 0, 0, 0.2) -15px -15px inset, rgba(0, 0, 127, 0.6) 5px 5px 5px inset; border-style: dashed;"></div>
+    <div class="square" style="-webkit-box-shadow: rgba(0, 0, 0, 0.2) 15px 15px inset;"></div>
+    <div class="square" style="-webkit-box-shadow: rgba(0, 0, 0, 0.2) -15px 15px 0 5px inset;"></div>
+    <div class="square" style="-webkit-box-shadow: rgba(0, 0, 0, 0.2) 15px -15px 0 -10px inset;"></div>
+    <div class="square" style="-webkit-box-shadow: rgba(0, 0, 0, 0.2) -15px -15px 5px inset;"></div>
+    <div class="square" style="-webkit-box-shadow: rgba(0, 0, 0, 0.2) -15px -15px inset, rgba(0, 0, 127, 0.6) 5px 5px 5px inset; border-style: dashed;"></div>
 </div>
 <div style="width: 600px; text-align: center;">
     <span style="
